--- a/package.json
+++ b/package.json
@@ -1,34 +1,32 @@
 {
-  "name": "kraken-ui",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "kraken-ui",
+    "version": "0.0.1",
+    "main": "index.tsx",
+    "license": "ISC",
+    "dependencies": {
+        "antd": "^4.5.2",
+        "fetch": "^1.1.0",
+        "react": "^16.13.1",
+        "react-dom": "^16.13.1"
+    },
+    "scripts": {
+        "start": "npm install && rimraf ./dist && parcel --no-cache index.html",
+        "build": "npm install && rimraf ./dist && NODE_ENV=production parcel build index.html"
+    },
+    "babel": {
+        "Presets": [
+            "babel-preset-nano-react-app"
+        ]
+    },
+    "devDependencies": {
+        "@babel/core": "^7.11.1",
+        "@types/node": "^14.0.27",
+        "@types/react": "^16.9.44",
+        "@types/react-dom": "^16.9.8",
+        "babel-preset-nano-react-app": "^0.1.0",
+        "parcel": "^1.12.4",
+        "parcel-plugin-bundle-visualiser": "^1.2.0",
+        "rimraf": "^3.0.2",
+        "typescript": "^3.9.7"
+    }
 }
