--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "main": "index.tsx",
     "license": "ISC",
     "dependencies": {
+        "@apollo/client": "^3.1.3",
+        "@apollo/react-hooks": "^4.0.0",
         "antd": "^4.5.2",
         "fetch": "^1.1.0",
+        "graphql": "^15.3.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1"
     },
