--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "graphql": "^15.3.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-sparklines": "^1.7.0",
         "urql": "^1.10.0"
     },
     "scripts": {
