--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
         "antd": "^4.7.0",
         "fetch": "^1.1.0",
         "graphql": "^15.3.0",
+        "parcel-bundler": "^1.12.4",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
+        "react-markdown": "^5.0.3",
         "react-sparklines": "^1.7.0",
+        "subscriptions-transport-ws": "^0.9.18",
         "urql": "^1.10.1"
     },
     "scripts": {
@@ -25,12 +28,14 @@
     },
     "devDependencies": {
         "@babel/core": "^7.12.3",
+        "@svgr/parcel-plugin-svgr": "^5.5.0",
         "@types/node": "^14.11.10",
         "@types/react": "^16.9.53",
         "@types/react-dom": "^16.9.8",
         "babel-preset-nano-react-app": "^0.1.0",
         "parcel": "^1.12.4",
         "parcel-plugin-bundle-visualiser": "^1.2.0",
+        "parcel-plugin-react-svg": "^0.1.0",
         "rimraf": "^3.0.2",
         "typescript": "^3.9.7"
     }
