--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-    "presets": ["@babel/preset-env", "@babel/preset-react"]
+    "presets": ["@babel/preset-env"],
+    
+    "plugins": [["import", {
+      "libraryName": "antd",
+      "libraryDirectory": "es",
+      "style": "css"
+    }]]
   }
