--- a/package.json
+++ b/package.json
@@ -21,17 +21,13 @@
         "start": "npm install && rimraf ./dist && parcel --no-cache index.html",
         "build": "npm install && rimraf ./dist && NODE_ENV=production parcel build index.html --public-url ./"
     },
-    "babel": {
-        "Presets": [
-            "babel-preset-nano-react-app"
-        ]
-    },
     "devDependencies": {
         "@babel/core": "^7.12.13",
         "@svgr/parcel-plugin-svgr": "^5.5.0",
         "@types/node": "^14.14.25",
         "@types/react": "^17.0.1",
         "@types/react-dom": "^17.0.0",
+        "babel-plugin-import": "^1.13.3",
         "babel-preset-nano-react-app": "^0.1.0",
         "parcel": "^1.12.4",
         "parcel-plugin-bundle-visualiser": "^1.2.0",
