--- a/package.json
+++ b/package.json
@@ -39,13 +39,17 @@
         "babel-preset-nano-react-app": "^0.1.0",
         "copyfiles": "^2.4.1",
         "css-loader": "^5.1.0",
+        "dayjs": "^1.10.4",
+        "eslint": "^7.21.0",
         "file-loader": "^6.2.0",
         "less": "^4.1.1",
         "parcel-plugin-bundle-visualiser": "^1.2.0",
         "parcel-plugin-react-svg": "^0.1.0",
         "parcel-plugin-static-files-copy": "^2.5.1",
+        "postcss": "^8.2.6",
         "rimraf": "^3.0.2",
-        "typescript": "^4.2.2"
+        "typescript": "^4.2.2",
+        "webpack": "^5.24.2"
     },
     "staticFiles": {
         "staticPath": "static",
