unique names for plugins

--- a/.babelrc
+++ b/.babelrc
@@ -2,10 +2,10 @@
     "presets": ["@babel/preset-env", "@babel/preset-react", "@babel/preset-typescript"],
     
     "plugins": [
-      "@babel/plugin-proposal-class-properties",
+      ["@babel/plugin-proposal-class-properties", {}, "cakewalk"],
       ["import", {
       "libraryName": "antd",
       "libraryDirectory": "es",
       "style": "css"
-    }]]
+    }, "fruitloop"]]
   }
