working on reducing package count

--- a/package.json
+++ b/package.json
@@ -3,16 +3,14 @@
     "version": "0.1.0",
     "license": "ISC",
     "dependencies": {
+        "@ant-design/icons": "^4.5.0",
         "antd": "^4.13.0",
-        "fetch": "^1.1.0",
         "graphql": "^15.5.0",
         "parcel": "^2.0.0-beta.1",
         "parcel-bundler": "^1.12.4",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-markdown": "^5.0.3",
-        "react-sparklines": "^1.7.0",
-        "subscriptions-transport-ws": "^0.9.18",
         "urql": "^2.0.1"
     },
     "scripts": {
@@ -25,29 +23,11 @@
         "@babel/preset-env": "^7.13.8",
         "@babel/preset-react": "^7.12.13",
         "@babel/preset-typescript": "^7.13.0",
-        "@svgr/parcel-plugin-svgr": "^5.5.0",
-        "@types/node": "^14.14.31",
         "@types/react": "^17.0.2",
         "@types/react-dom": "^17.0.1",
-        "@typescript-eslint/eslint-plugin": "^4.15.2",
-        "@typescript-eslint/parser": "^4.15.2",
-        "babel-loader": "^8.2.2",
         "babel-plugin-import": "^1.13.3",
-        "babel-plugin-transform-class-properties": "^6.24.1",
-        "babel-preset-nano-react-app": "^0.1.0",
         "copyfiles": "^2.4.1",
-        "css-loader": "^5.1.0",
-        "dayjs": "^1.10.4",
-        "eslint": "^7.21.0",
-        "file-loader": "^6.2.0",
-        "less": "^4.1.1",
-        "parcel-plugin-bundle-visualiser": "^1.2.0",
-        "parcel-plugin-react-svg": "^0.1.0",
-        "parcel-plugin-static-files-copy": "^2.5.1",
-        "postcss": "^8.2.6",
-        "rimraf": "^3.0.2",
-        "typescript": "^4.2.2",
-        "webpack": "^5.24.2"
+        "rimraf": "^3.0.2"
     },
     "staticFiles": {
         "staticPath": "static",
