--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@ant-design/icons": "^4.5.0",
         "antd": "^4.13.0",
+        "dayjs": "^1.10.4",
         "graphql": "^15.5.0",
         "parcel": "^2.0.0-beta.1",
         "parcel-bundler": "^1.12.4",
@@ -27,7 +28,8 @@
         "@types/react-dom": "^17.0.1",
         "babel-plugin-import": "^1.13.3",
         "copyfiles": "^2.4.1",
-        "rimraf": "^3.0.2"
+        "rimraf": "^3.0.2",
+        "typescript": "^4.2.3"
     },
     "staticFiles": {
         "staticPath": "static",
