--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
     "dependencies": {
         "@ant-design/icons": "^4.5.0",
         "antd": "^4.13.0",
+        "dayjs": "^1.10.4",
         "graphql": "^15.5.0",
-        "parcel": "^2.0.0-beta.1",
-        "parcel-bundler": "^1.12.4",
+        "parcel": "^2.0.0-beta.2",
+        "parcel-bundler": "^1.12.5",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-markdown": "^5.0.3",
@@ -15,7 +16,7 @@
     },
     "scripts": {
         "start": "npm install && rimraf ./dist && parcel --no-cache index.html",
-        "build": "npm install && rimraf ./dist && parcel build index.html --public-url ./ && copyfiles -u 1 ./public/* ./dist",
+        "build": "npm install && rimraf ./dist && node scripts/fix-parcel-rc-table-issue.js && parcel build index.html --public-url ./ && copyfiles -u 1 ./public/* ./dist",
         "build-web": "npm install && rimraf ./dist/* && webpack --config ./webpack.config.js"
     },
     "devDependencies": {
@@ -27,7 +28,8 @@
         "@types/react-dom": "^17.0.1",
         "babel-plugin-import": "^1.13.3",
         "copyfiles": "^2.4.1",
-        "rimraf": "^3.0.2"
+        "rimraf": "^3.0.2",
+        "typescript": "^4.2.3"
     },
     "staticFiles": {
         "staticPath": "static",
